<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:app="http://schemas.android.com/apk/res-auto"--><!--xmlns:tools="http://schemas.android.com/tools"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent">-->

<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:app="http://schemas.android.com/apk/res-auto"--><!--xmlns:tools="http://schemas.android.com/tools"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--android:background="@drawable/background_main">-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/tvcname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/acme"
            android:text="@string/label_company"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/tvmobile"
            app:layout_constraintTop_toBottomOf="@+id/tvmobile" />

        <TextView
            android:id="@+id/tvpurpose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:fontFamily="@font/acme"
            android:text="@string/label_purpose"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/tvcname"
            app:layout_constraintTop_toBottomOf="@+id/tvcname" />

        <TextView
            android:id="@+id/tvname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/acme"
            android:text="@string/label_name"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvline" />

        <TextView
            android:id="@+id/tvline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/acme"
            android:text="@string/details_header"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Enter Details" />

        <TextView
            android:id="@+id/tvmobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:fontFamily="@font/acme"
            android:text="@string/label_mobile_no"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/tvname"
            app:layout_constraintTop_toBottomOf="@+id/tvname" />

        <EditText
            android:id="@+id/etname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginEnd="8dp"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
            android:ems="10"
            android:fontFamily="@font/acme"
            android:hint="@string/placeholder_name"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:textColorHint="@color/colorPlaceholder"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvname"
            app:layout_constraintTop_toTopOf="@+id/tvname" />

        <EditText
            android:id="@+id/etcname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:ems="10"
            android:fontFamily="@font/acme"
            android:hint="@string/placeholder_company"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:textColorHint="@color/colorPlaceholder"
            android:textSize="20sp"
            android:focusable="false"
            app:layout_constraintBottom_toBottomOf="@+id/tvcname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/etmobile"
            app:layout_constraintTop_toTopOf="@+id/tvcname" />


        <EditText
            android:id="@+id/etmobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:digits="0123456789"
            android:ems="10"
            android:fontFamily="@font/acme"
            android:hint="@string/placeholder_mobile_no"
            android:inputType="textPersonName|phone"
            android:maxLength="10"
            android:textColor="#FFFFFF"
            android:textColorHint="@color/colorPlaceholder"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvmobile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/etname"
            app:layout_constraintTop_toTopOf="@+id/tvmobile" />

        <EditText
            android:id="@+id/etpurpose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:fontFamily="@font/acme"
            android:gravity="start|top"
            android:hint="@string/placeholder_purpose"
            android:inputType="textMultiLine"
            android:lines="2"
            android:maxLength="50"
            android:textColor="#FFFFFF"
            android:textColorHint="@color/colorPlaceholder"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvpurpose"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/etcname"
            app:layout_constraintTop_toTopOf="@+id/tvpurpose" />

        <TextView
            android:id="@+id/tvroom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/acme"
            android:text="@string/label_room"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/tvpurpose"
            app:layout_constraintTop_toBottomOf="@+id/tvpurpose" />

        <TextView
            android:id="@+id/tvroomval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/acme"
            android:text="@string/room_1"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvroom"
            app:layout_constraintStart_toStartOf="@+id/etpurpose"
            app:layout_constraintTop_toTopOf="@+id/tvroom"
            app:layout_constraintVertical_bias="1.0" />


        <TextView
            android:id="@+id/tvtiming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/acme"
            android:text="@string/label_timing"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/tvroom"
            app:layout_constraintTop_toBottomOf="@+id/tvroom" />

        <TextView
            android:id="@+id/tvtimingval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/acme"
            android:text="@string/dumm_timings"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvroomval"
            app:layout_constraintTop_toTopOf="@+id/tvtiming" />

        <Button
            android:id="@+id/bproceed"
            android:layout_width="@dimen/details_submit_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/book_button"
            android:enabled="false"
            android:fontFamily="@font/acme"
            android:text="@string/details_submit"
            android:textSize="@dimen/details_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvtimingval" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
    <!--</ScrollView>--><!--</LinearLayout>-->