<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvtime1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="264dp"
            android:fontFamily="@font/acme"
            android:hint="@string/pick_time_select"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/pick_time_text"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.461" />

        <TextView
            android:id="@+id/tvline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/acme"
            android:text="@string/pick_time_header"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/pick_time_header"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/acme"
            android:text="@string/pick_time_label_date"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/pick_time_label"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/tvline" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="164dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/acme"
            android:text="@string/pick_time_label_from"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/pick_time_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/acme"
            android:text="@string/pick_time_label_to"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/pick_time_label"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/tvtime2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="264dp"
            android:fontFamily="@font/acme"
            android:hint="@string/pick_time_select"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/pick_time_text"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.993"
            app:layout_constraintStart_toStartOf="@+id/tvtime1"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/tvdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="264dp"
            android:fontFamily="@font/acme"
            android:hint="@string/pick_time_date"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/pick_time_text"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/tvtime1"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.5" />

        <Button
            android:id="@+id/bbook"
            android:layout_width="@dimen/pick_time_btn_width"
            android:layout_height="wrap_content"
            android:layout_marginEnd="56dp"
            android:layout_marginBottom="144dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/acme"
            android:text="@string/pick_time_validate"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>