<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/book_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/acme"
        android:text="@string/book_header"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Please choose the conference room you want to book." />

    <!--<LinearLayout-->
    <!--android:id="@+id/linearLayout"-->
    <!--style="?attr/buttonBarStyle"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="0dp"-->
    <!--android:layout_marginBottom="8dp"-->
    <!--android:orientation="horizontal"-->
    <!--android:weightSum="2.0"-->
    <!--app:layout_constraintBottom_toBottomOf="parent"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintHorizontal_bias="1.0"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/linearLayout1"-->
    <!--app:layout_constraintVertical_bias="0.0">-->

    <Button
        android:id="@+id/book_hall_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="116dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/book_button"
        android:fontFamily="@font/acme"
        android:onClick="store_booking"
        android:text="@string/book_btn"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/book_hall_1"
        app:layout_constraintTop_toBottomOf="@+id/book_hall_1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvconference2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:text="@string/book_room_2"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tvconference1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvconference1"
        app:layout_constraintTop_toTopOf="@+id/book_hall_2"
        tools:text="Conference Room" />
    <!--</LinearLayout>-->

    <!--<LinearLayout-->
    <!--android:id="@+id/linearLayout1"-->
    <!--style="?attr/buttonBarStyle"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="horizontal"-->
    <!--android:weightSum="2.0"-->
    <!--tools:layout_editor_absoluteY="52dp">-->

    <TextView
        android:id="@+id/tvconference1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:fontFamily="@font/acme"
        android:text="@string/book_room_1"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/book_hall_1"
        app:layout_constraintHorizontal_bias="0.259"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/book_hall_1"
        tools:text="Meeting Room" />

    <Button
        android:id="@+id/book_hall_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="52dp"
        android:layout_weight="1"
        android:background="@drawable/book_button"
        android:fontFamily="@font/acme"
        android:text="@string/book_btn"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
    <!--</LinearLayout>-->

    <TextView
        android:id="@+id/textView5"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:text="(Capacity - 30)"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/book_hall_2"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:text="(Capacity - 4)"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/book_hall_1"
        app:layout_constraintEnd_toEndOf="@+id/tvconference1"
        app:layout_constraintStart_toStartOf="@+id/tvconference1"
        app:layout_constraintTop_toBottomOf="@+id/tvconference1" />

</android.support.constraint.ConstraintLayout>